# ant-ai

./: .gitignore  .gitlab-ci.yml  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  compose.test.yml  mkdocs.yml  pyproject.toml  pytest.toml  ruff.toml  ty.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  change_request.yml  docs.yml  feature.yml  task.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  publish.yml  release.yml
.gitlab/issue_templates/: bug.md  change_request.md  documentation.md  feature.md  task.md
.gitlab/merge_request_templates/: default.md
docs/: .nav.yml  _gen_reference.py  funding.md  index.md
docs/docs/: .nav.yml  index.md
docs/docs/architecture/: index.md
docs/docs/install/: index.md
docs/docs/multi-agent/: example.md  index.md
docs/docs/single-agent/: .nav.yml  example.md  index.md  visualize.md
docs/stylesheets/: extra.css
src/ant_ai/: __init__.py
src/ant_ai/a2a/: __init__.py  agent.py  client.py  colony.py  config.py  context_builder.py  executor.py  server.py  session.py  translator.py  types.py
src/ant_ai/agent/: __init__.py  agent.py  base.py
src/ant_ai/core/: __init__.py  events.py  exceptions.py  logging.py  message.py  response.py  result.py  types.py
src/ant_ai/hooks/: __init__.py  layer.py  protocol.py
src/ant_ai/llm/: __init__.py  protocol.py
src/ant_ai/observer/: __init__.py  composite.py  obs.py  protocol.py
src/ant_ai/steps/: __init__.py  llm_step.py  protocol.py  tool_step.py
src/ant_ai/tools/: __init__.py  registry.py  tool.py
src/ant_ai/workflow/: __init__.py  action.py  visualize.py  workflow.py
tests/integration/a2a/: codegen_agent.py  conftest.py  test_a2a_executor.py  test_a2a_remote_agent.py  test_a2a_server.py  test_history.py
tests/integration/llm/: test_litellm_vllm.py
tests/integration/multi_agent/: conftest.py  test_collab.py  test_single_agent.py
tests/integration/observer/: test_langfuse_integration.py
tests/integration/tools/: conftest.py  test_agent_tools.py
tests/integration/workflow/: conftest.py  test_visualize_integration.py
tests/unit/a2a/: test_a2a_agent_tool.py  test_colony.py
(+41 files in other folders)
