[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "ant-ai"
version = "1.0.3"
description = "A lightweight Python framework for building multi-agent AI systems"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "Cezar Sas", email = "cezar.sas@supsi.ch" },
    { name = "Vincenzo Giuffrida", email = "vincenzo.giuffrida@supsi.ch" },
    { name = "Sandra Mitrovic", email = "sandra.mitrovic@supsi.ch" },
    { name = "Matteo Salani", email = "matteo.salani@supsi.ch" },
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "a2a-sdk[sql,http-server,grpc,encryption,telemetry]>=1.0.1",
    "fastapi>=0.136.0",
    "litellm>=1.83.10",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=4.3.1"]
openai = ["openai>=2.24.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
docs = [
    "griffe-pydantic>=1.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.3.0",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-panzoom-plugin>=0.5.2",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings[python]>=1.0.4",
]

[project.urls]
Homepage = "https://idea-idsia.github.io/ant-ai/"
Documentation = "https://idea-idsia.github.io/ant-ai/"
Repository = "https://github.com/idea-idsia/ant-ai"

[tool.uv]
exclude-newer = "P2D" # Wait for the package to be up for at least 2 days before updating to it.
